--- a/Themes/Air-for-Discord/Dark/Air-for-Discord.theme.css
+++ b/Themes/Air-for-Discord/Dark/Air-for-Discord.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Air-for-Discord","version":"1.0","author":"Madame Solette - Many thanks to Peter & Sir Pod-Ex for being available to test some stuff !","website":"https://github.com/MadameSolette/Air-for-Discord","description":""}*//{}
+//META{"name":"Air-for-Discord","version":"1.0 || Dark || ","author":"Madame Solette - Many thanks to Peter & Sir Pod-Ex for being available to test some stuff !","website":"https://github.com/MadameSolette/Air-for-Discord","description":""}*//{}
 
 @import url(https://madamesolette.github.io/BetterDiscord/Air-for-Discord/Dark/source/airfordiscord.css);
 
