--- a/Themes/Mini-Themes/RemoveDiscoveryButton/RemoveDiscoveryButton.theme.css
+++ b/Themes/Mini-Themes/RemoveDiscoveryButton/RemoveDiscoveryButton.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"RemoveDiscoveryButton","version":"1.0","author":"Madame Solette","website":"","description":""}*//{}
+//META{"name":"RemoveDiscoveryButton","version":"1.0","author":"Madame Solette","website":"https://github.com/MadameSolette/BetterDiscord/tree/master/Themes/Mini-Themes/RemoveDiscoveryButton","description":""}*//{}
 
 .container-11WMXy {
     display: none;
