--- a/Themes/Air-for-Discord/Dark/source/airfordiscord.css
+++ b/Themes/Air-for-Discord/Dark/source/airfordiscord.css
@@ -469,6 +469,72 @@ svg.homeIcon-tEMBK1 {
     background-image: linear-gradient(90deg,transparent,rgba(116, 127, 141, 0.85));
 }
 
+/* Status */
+.online-2S838R {
+    background-color: transparent;
+    box-shadow: 0 0 1px 3px #43B581;
+    height: 8px;
+    width: 8px;
+    margin-right: 4px;
+    margin-top: 2px;
+}
+.idle-3DEnRT {
+    background-color: transparent;
+    box-shadow: 0 0 1px 3px #FAA61A;
+    height: 8px;
+    width: 8px;
+    margin-right: 4px;
+    margin-top: 2px;
+}
+.dnd-1_xrcq {
+    background-color: transparent;
+    box-shadow: 0 0 1px 3px #F04747;
+    height: 8px;
+    width: 8px;
+    margin-right: 4px;
+    margin-top: 2px;
+}
+.invisible-1kp8Z0, .offline-3qoTek, .unknown-Ms2zdV {
+    background-color: transparent;
+    box-shadow: 0 0 1px 3px #747F8D;
+    height: 8px;
+    width: 8px;
+    margin-right: 4px;
+    margin-top: 2px;
+}
+.statusProfile-3ynqtt.online-2S838R {
+    box-shadow: inset 0 0 1px 2px #43B581;
+}
+.statusProfile-3ynqtt.idle-3DEnRT {
+    box-shadow: inset 0 0 1px 2px #FAA61A;
+}
+.statusProfile-3ynqtt.dnd-1_xrcq {
+    box-shadow: inset 0 0 1px 2px #F04747;
+}
+.statusProfile-3ynqtt.invisible-1kp8Z0, .offline-3qoTek, .unknown-Ms2zdV {
+    box-shadow: inset 0 0 1px 2px #747F8D;
+}
+.channel-2QD9_O.selected-1HYmZZ .status-1ibiUI {
+    border-color: transparent;
+}
+.channel-2QD9_O .status-1ibiUI {
+    border: 0px solid #2f3136;
+}
+.theme-dark .status-2kJpnA, .theme-light .status-2kJpnA {
+    border: 0px solid #2f3136;
+}
+.status-2s6iDp {
+    border: 0px solid #f6f6f7;
+    bottom: 0px;
+}
+.statusProfile-3ynqtt {
+    background-size: 100%;
+    height: 20px;
+    width: 20px;
+    right: 1px;
+    bottom: 5px;
+}
+
 /* Chat Header */
 .theme-dark .title-3qD0b- {
     background-color: #1a1a1a;
