--- a/Themes/Air-for-Discord/Dark/source/airfordiscord.css
+++ b/Themes/Air-for-Discord/Dark/source/airfordiscord.css
@@ -490,7 +490,7 @@ svg.homeIcon-tEMBK1 {
 
 /* Status */
 .online-2S838R {
-    background-color: transparent;
+    background-color: #222222;
     box-shadow: 0 0 2px 2px #43B581;
     border: 1px solid #43B581 !important;
     height: 8px;
@@ -499,7 +499,7 @@ svg.homeIcon-tEMBK1 {
     margin-top: 2px;
 }
 .idle-3DEnRT {
-    background-color: transparent;
+    background-color: #222222;
     box-shadow: 0 0 2px 2px #FAA61A;
     border: 1px solid #FAA61A !important;
     height: 8px;
@@ -508,7 +508,7 @@ svg.homeIcon-tEMBK1 {
     margin-top: 2px;
 }
 .dnd-1_xrcq {
-    background-color: transparent;
+    background-color: #222222;
     box-shadow: 0 0 2px 2px #F04747;
     border: 1px solid #F04747 !important;
     height: 8px;
@@ -517,7 +517,7 @@ svg.homeIcon-tEMBK1 {
     margin-top: 2px;
 }
 .invisible-1kp8Z0, .offline-3qoTek, .unknown-Ms2zdV {
-    background-color: transparent;
+    background-color: #222222;
     box-shadow: 0 0 2px 2px #747F8D;
     border: 1px solid #747F8D !important;
     height: 8px;
@@ -591,8 +591,14 @@ svg.homeIcon-tEMBK1 {
     background-size: 100%;
     height: 18px;
     width: 18px;
-    right: 1px;
-    bottom: 5px;
+    right: 0px;
+    bottom: 4px;
+}
+.avatarSmall-3ACRaI .status-2zcSVk {
+    bottom: 0px;
+    height: 8px;
+    right: -5px;
+    width: 8px;
 }
 
 /* Chat Header */
