--- a/Themes/Air-for-Discord/Dark/Air-for-Discord.theme.css
+++ b/Themes/Air-for-Discord/Dark/Air-for-Discord.theme.css
@@ -1,3 +1,7 @@
+//META{"name":"Air-for-Discord","version":"1.0 || Dark || ","author":"Madame Solette - Many thanks to Peter & Sir Pod-Ex for being available to test some stuff !","website":"https://github.com/MadameSolette/BetterDiscord/tree/master/Themes/Air-for-Discord/Dark","description":""}*//{}
+
+@import url(https://madamesolette.github.io/BetterDiscord/Themes/Air-for-Discord/Dark/source/airfordiscord.css);
+
 :root {
 
     /* Top Bar */
