--- a/Themes/Air-for-Discord/Dark/source/airfordiscord.css
+++ b/Themes/Air-for-Discord/Dark/source/airfordiscord.css
@@ -920,6 +920,30 @@ svg.homeIcon-tEMBK1 {
 .buttonContainer-KtQ8wc {
     margin-top: 3px;
 }
+.theme-dark .messageGroupBlocked-3wrQQX {
+    background: #222222;
+    border-color: transparent;
+}
+.theme-dark .messageGroupBlocked-3wrQQX.revealed-1_RKsf {
+    background: #222222;
+    border-color: #2f3136;
+}
+.theme-dark .messageGroupBlocked-3wrQQX .messageGroupBlockedBtn-1PBBh- {
+    background: #1a1a1a;
+    color: #cecece;
+    transition: all 250ms ease;
+}
+.theme-dark .messageGroupBlocked-3wrQQX .messageGroupBlockedBtn-1PBBh-:hover {
+    background: #1a1a1a;
+}
+.theme-dark .messageGroupBlocked-3wrQQX:hover {
+    box-shadow: 0 0 0 0px #00BCD4;
+}
+.messageGroupBlocked-3wrQQX {
+    border: 0px solid;
+    border-radius: 0px;
+    margin: 6px 16px 25px 19px;
+}
 
 /* Code Block */
 #app-mount .markup-2BOw-j code {
