--- a/Themes/Air-for-Discord/Dark/source/airfordiscord.css
+++ b/Themes/Air-for-Discord/Dark/source/airfordiscord.css
@@ -1694,6 +1694,86 @@ svg.homeIcon-tEMBK1 {
     border-radius: 0px;
     color: #1a1a1a;
 }
+.theme-dark .activityFeed-1C0EmJ {
+    background-color: #282828;
+}
+.theme-dark .layout-1cQCv2 {
+    background-image: none;
+}
+.inset-GQDQYw, .outer-2IVh5n {
+    border-radius: 0px;
+}
+.wrapper-Qvfyci {
+    border-radius: 0px;
+}
+.theme-dark .outer-2IVh5n {
+    background-color: #222222;
+}
+.theme-dark .outer-2IVh5n.interactive-1BeKSi:hover {
+    background-color: #1a1a1a;
+    box-shadow: 0 0 0 rgba(0,0,0,.24);
+    transform: scale(1.02);
+}
+.theme-dark .wrapper-9ppXpy {
+    box-shadow: inset 0 0 0 #292b2f;
+}
+.iconWrapper-3-slmh {
+    border-radius: 0px;
+}
+.theme-dark .interactive-1FxC7B:hover {
+    background-color: #282828;
+}
+.coloredBackground-37Z6Gv {
+    background: linear-gradient(90deg,#00BCD4,#FF8C00);
+    opacity: 1;
+}
+.theme-dark .unwrapped-37iUtM {
+    background-color: #222222;
+    border-radius: 0px;
+}
+.theme-dark .unwrapped-37iUtM.clickable-nnkAZy:hover, .theme-dark .wrapped-15rg6t {
+    background-color: #1a1a1a;
+}
+.theme-dark .empty-hejAOj {
+    background-color: #222222;
+    border-radius: 0px;
+}
+.theme-dark .popoutContainer-3WC9HR:hover {
+    background-color: #1a1a1a;
+}
+.popoutContainer-3WC9HR:first-child {
+    border-radius: 0px;
+}
+.theme-dark .popout-3G62UL {
+    background-color: #222222;
+    box-shadow: 0 0 1px 1px #1a1a1a;
+    border-radius: 0px;
+}
+.wrapper-3rh-14 {
+    border-radius: 0px;
+}
+.theme-dark .enabled-5QKLzu:hover {
+    background-color: #1a1a1a;
+}
+.theme-dark .multipleIconWrapper-2TXVB4, .theme-dark .section-3TvauS {
+    background-color: #1a1a1a;
+    border-radius: 0px;
+}
+.theme-dark .multipleIconWrapper-2TXVB4, .theme-dark .section-3TvauS:hover {
+    background-color: #282828;
+    border-radius: 0px;
+}
+.theme-dark .inset-GQDQYw {
+    background-color: #222222;
+}
+.theme-dark .memberListItem-vHCzSI:hover {
+    background-color: #1a1a1a;
+    border-radius: 0px;
+}
+.theme-dark .recentlyPlayedContainer-2F3MqS {
+    background-color: #222222;
+    border-radius: 0px;
+}
 
 /* Bibliothek */
 .emptyStateLarge-1nQX5A {
@@ -2386,6 +2466,11 @@ a {
 .theme-dark .searchOption-8nCYo-.selected-1r_nkg {
     background-color: #1a1a1a;
 }
+.theme-dark .addGamePopout-2RY8Ju {
+    background-color: #222222;
+    box-shadow: 0 0 1px 2px #1a1a1a;
+    border-radius: 0px;
+}
 
 
 /* Spacer */
@@ -2762,6 +2847,21 @@ a {
     border-radius: 0px;
     color: #fff;
 }
+.lookFilled-1Gx00P.colorWhite-rEQuAQ {
+    background-color: transparent;
+    box-shadow: 0 0 0 1px #FF8C00;
+    color: #4f545c;
+    border-radius: 0px;
+}
+.lookFilled-1Gx00P.colorWhite-rEQuAQ:hover {
+    background-color: transparent;
+    box-shadow: 0 0 0 2px #FF8C00;
+    color: #4f545c;
+    border-radius: 0px;
+}
+.theme-dark .whiteButton-1lwF-y {
+    color: #fff;
+}
 
 /* Slider */
 .theme-dark .bar-2Qqk5Z {
@@ -3114,7 +3214,7 @@ a {
 
 /* Changelog */
 #bd-settingspane-container .bda-slist::before {
-    content:"30.03.2019 - Last changes on Air-for-Discord :\A\A- Change Blocked Messages\A- Add Guild scale\A- Fix Status in Friend Tab\A- Fix height in Create/Add Server\A- Add Scale to Buttons\A- Add Last changes box";
+    content:"31.03.2019 - Last changes on Air-for-Discord Theme :\A\A- Change Activity Tab\A- Change Settings -> Game Activity: Add Game";
     display: block;
     line-height:16px;
     font-size:12px;
